infrastructure/base/infra-testing/goldilocks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldilocks-controller
  namespace: infra-testing
  labels:
    app: goldilocks
    component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goldilocks
      component: controller
  template:
    metadata:
      labels:
        app: goldilocks
        component: controller
    spec:
      serviceAccountName: goldilocks
      containers:
        - name: goldilocks
          image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.14.7
          command:
            - /goldilocks
            - controller
            - -v2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldilocks-dashboard
  namespace: infra-testing
  labels:
    app: goldilocks
    component: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goldilocks
      component: dashboard
  template:
    metadata:
      labels:
        app: goldilocks
        component: dashboard
    spec:
      serviceAccountName: goldilocks
      containers:
        - name: goldilocks
          image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.14.7
          command:
            - /goldilocks
            - dashboard
            - -v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: goldilocks-dashboard
  namespace: infra-testing
  labels:
    app: goldilocks
    component: dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: goldilocks
    component: dashboard
